--- a/lang/ocaml/Makefile
+++ b/lang/ocaml/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.37 2005/06/07 00:59:48 minskim Exp $
+# $NetBSD: Makefile,v 1.38 2005/06/14 21:00:41 minskim Exp $
 
 .include "Makefile.common"
 
@@ -10,7 +10,8 @@ BUILD_TARGET=		world
     (${MACHINE_ARCH} == "sparc")
 BUILD_TARGET+=	opt opt.opt
 PLIST_SRC=	${PKGDIR}/PLIST.opt
-.  if ${OPSYS} != "Darwin"
+.  if (${OPSYS} != "Darwin") && \
+      !(${OPSYS} == "SunOS" && ${MACHINE_ARCH} == "i386")
 PLIST_SRC+=	${PKGDIR}/PLIST.prof
 .  endif
 PLIST_SRC+=	${PKGDIR}/PLIST
