--- a/mail/courier-maildir/Makefile.common
+++ b/mail/courier-maildir/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2005/05/22 05:35:33 jlam Exp $
+# $NetBSD: Makefile.common,v 1.3 2005/08/11 00:03:32 jlam Exp $
 #
 # Package Makefiles should include this file after setting PKGBASE and
 # PKG_SUPPORTED_OPTIONS.
@@ -30,3 +30,5 @@ PKG_SUPPORTED_OPTIONS+=	fam
 .if !empty(PKG_OPTIONS:Mfam)
 .  include "../../mk/fam.buildlink3.mk"
 .endif
+
+.include "../../devel/pcre/buildlink3.mk"
