--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.137 2005/09/22 15:02:56 wiz Exp $
+# $NetBSD: Makefile,v 1.138 2005/10/05 12:00:09 skrll Exp $
 #
 
 COMMENT=	Emulators for other operating systems
@@ -136,6 +136,7 @@ SUBDIR+=	xmame
 SUBDIR+=	xmess
 SUBDIR+=	xtrs
 SUBDIR+=	xyame
+SUBDIR+=	z26
 SUBDIR+=	zsnes
 
 .include "../mk/bsd.pkg.subdir.mk"
