--- a/multimedia/xvidcore/Makefile
+++ b/multimedia/xvidcore/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2005/04/11 21:46:43 tv Exp $
+# $NetBSD: Makefile,v 1.12 2005/05/28 00:20:05 reed Exp $
 #
 
 DISTNAME=	xvidcore-1.0.3
+PKGREVISION=	1
 CATEGORIES=	multimedia
 MASTER_SITES=	http://downloads.xvid.org/downloads/
 EXTRACT_SUFX=	.tar.bz2
