--- a/math/py-rpy/Makefile
+++ b/math/py-rpy/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2004/11/21 05:31:03 markd Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/11 21:46:31 tv Exp $
 #
 
-DISTNAME=	rpy-0.3.1
+DISTNAME=	rpy-0.4.6
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	math python
 MASTER_SITES=   ${MASTER_SITE_SOURCEFORGE:=rpy/}
 
