--- a/archivers/lzo/Makefile
+++ b/archivers/lzo/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2005/04/11 21:44:49 tv Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/07/14 20:02:48 wiz Exp $
 #
 
-DISTNAME=	lzo-2.01
+DISTNAME=	lzo-2.02
 CATEGORIES=	archivers
 MASTER_SITES=	http://ftp.uni-koeln.de/util/arc/ \
 		http://www.oberhumer.com/opensource/lzo/download/
