--- a/net/xmftp/Makefile
+++ b/net/xmftp/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.10 2005/05/22 20:08:26 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/06/17 03:50:29 jlam Exp $
 #
 
 DISTNAME=	xmftp-1.0.4
 PKGREVISION=	1
 CATEGORIES=	net
-MASTER_SITES=	http://www.cse.fau.edu/~valankar/old/xmftp/
+MASTER_SITES=	http://viraj.org/old/xmftp/
 
 MAINTAINER=	rxg@NetBSD.org
-HOMEPAGE=	http://www.cse.fau.edu/~valankar/old/xmftp/
+HOMEPAGE=	http://viraj.org/old/xmftp/
 COMMENT=	X/Motif FTP client
 
 WRKSRC=		${WRKDIR}/xmftp/source
