--- a/net/GeoIP/Makefile
+++ b/net/GeoIP/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2005/03/12 05:22:54 tv Exp $
+# $NetBSD: Makefile,v 1.11 2005/04/11 21:46:43 tv Exp $
 #
 
-DISTNAME=	GeoIP-1.3.8
+DISTNAME=	GeoIP-1.3.14
 CATEGORIES=	net
 MASTER_SITES=	http://www.maxmind.com/download/geoip/api/c/
 
@@ -19,6 +19,8 @@ CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
 
 EGDIR=		${PREFIX}/share/examples/GeoIP
 CONF_FILES=	${EGDIR}/GeoIP.conf.default ${PKG_SYSCONFDIR}/GeoIP.conf
+
+TEST_TARGET=	check
 
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
