--- a/net/GeoIP/Makefile
+++ b/net/GeoIP/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2005/04/11 21:46:43 tv Exp $
+# $NetBSD: Makefile,v 1.12 2005/10/22 19:58:42 heinz Exp $
 #
 
 DISTNAME=	GeoIP-1.3.14
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	http://www.maxmind.com/download/geoip/api/c/
 
