--- a/net/connect/Makefile
+++ b/net/connect/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2004/07/19 13:36:11 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2005/06/17 03:50:24 jlam Exp $
 
 DISTNAME=	connect
 PKGNAME=	${DISTNAME}-1.83
@@ -13,15 +13,8 @@ COMMENT=	Open a TCP connection using a SOCKS4/5 or HTTP proxy server
 EXTRACT_ONLY=	# empty
 DIST_SUBDIR=	${PKGNAME_NOREV}
 
-.include "../../mk/bsd.prefs.mk"
-
-.if ${OPSYS} == Darwin
-LIBS=	-lresolv
-.elif ${OPSYS} == SunOS
-LIBS=	-lsocket -lnsl
-.else
-LIBS=
-.endif
+LIBS.Darwin+=	-lresolv
+LIBS.SunOS+=	-lsocket -lnsl
 
 INSTALLATION_DIRS=	bin
 
