--- a/shells/pdksh/Makefile
+++ b/shells/pdksh/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2005/07/29 18:32:18 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2005/09/20 04:23:49 jlam Exp $
 #
 
 DISTNAME=	pdksh-5.2.14
@@ -17,8 +17,8 @@ COMMENT=	Free clone of the AT&T Korn shell
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--program-prefix=pd
+GNU_CONFIGURE=		yes
+CONFIGURE_ARGS+=	--program-prefix=pd
 
 USE_PKGINSTALL=	yes
 PKG_SHELL=	bin/pdksh
