--- a/shells/rc/Makefile
+++ b/shells/rc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2005/07/29 18:32:18 jlam Exp $
+# $NetBSD: Makefile,v 1.19 2005/09/20 04:23:49 jlam Exp $
 
 DISTNAME=       rc-1.6
 PKGREVISION=	1
@@ -9,8 +9,8 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.star.le.ac.uk/%7Etjg/rc/
 COMMENT=	Unix incarnation of the plan9 shell
 
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--with-history
+GNU_CONFIGURE=		yes
+CONFIGURE_ARGS+=	--with-history
 
 USE_PKGINSTALL=	yes
 PKG_SHELL=	bin/rc
