--- a/devel/noweb/Makefile
+++ b/devel/noweb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.28 2004/01/20 12:13:28 agc Exp $
+# $NetBSD: Makefile,v 1.29 2005/03/24 21:12:52 wiz Exp $
 
 DISTNAME=		noweb-2.9a
 PKGREVISION=		1
@@ -10,7 +10,7 @@ MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.cs.virginia.edu/~nr/noweb/
 COMMENT=		Simple, extensible literate-programming tool
 
-DEPENDS=		icon>=9.3:../../lang/icon
+DEPENDS+=		icon>=9.3:../../lang/icon
 
 WRKSRC=			${WRKDIR}/src
 
