--- a/archivers/gtar-base/Makefile
+++ b/archivers/gtar-base/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.42 2005/04/11 21:44:48 tv Exp $
+# $NetBSD: Makefile,v 1.43 2005/10/19 11:02:28 cube Exp $
 #
 
 DISTNAME=       tar-1.15.1
@@ -58,7 +58,7 @@ post-install:
 	${INSTALL_DATA} ${FILESDIR}/gtar.1 \
 		${PREFIX}/man/man1/${GTAR_PROGRAM_PREFIX}tar.1
 .if ${GTAR_PROGRAM_PREFIX} != "g"
-	${LN} -sf ${GTAR_PROGRAM_PREFIX}tar ${PREFIX}/bin/gtar
+	${LN} -sf ${GTAR_PROGRAM_PREFIX}tar ${PREFIX}/bin/"gtar"
 .endif
 .if ${OPSYS} != "Interix"
 	${ECHO} 'libexec/${GTAR_PROGRAM_PREFIX}rmt' >${WRKSRC}/.PLIST.rmt
