--- a/audio/libao-esound/Makefile
+++ b/audio/libao-esound/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2004/11/16 14:49:52 adam Exp $
+# $NetBSD: Makefile,v 1.9 2005/10/08 12:30:38 jmmv Exp $
 
-.include "../libao/Makefile.common"
+.include "../../audio/libao/Makefile.common"
 
 PKGNAME=	${DISTNAME:S/libao/libao-esound/}
 
