--- a/audio/libao-macosx/Makefile
+++ b/audio/libao-macosx/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2005/05/20 19:20:56 jmmv Exp $
+# $NetBSD: Makefile,v 1.2 2005/10/08 12:30:38 jmmv Exp $
 
-.include "../libao/Makefile.common"
+.include "../../audio/libao/Makefile.common"
 
 PKGNAME=	${DISTNAME:S/libao/libao-macosx/}
 
