--- a/misc/sci/Makefile
+++ b/misc/sci/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2003/06/02 01:18:08 jschauma Exp $
+# $NetBSD: Makefile,v 1.10 2003/07/17 21:49:53 grant Exp $
 #
 
 DISTNAME=	sci-0.5.6
@@ -9,7 +9,7 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://linuxparts.com/software.html
 COMMENT=	Curses based data entry via templates
 
-GNU_CONFIGURE=	# Yupp
+GNU_CONFIGURE=	yes
 
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/sci ${PREFIX}/share/examples/sci
