--- a/multimedia/mkvtoolnix/Makefile.dist
+++ b/multimedia/mkvtoolnix/Makefile.dist
@@ -1,3 +1,5 @@
+# $NetBSD$
+
 DISTNAME=	mkvtoolnix-1.4.2
 CATEGORIES=	multimedia
 MASTER_SITES=	http://www.bunkus.org/videotools/mkvtoolnix/sources/
