--- a/wm/Makefile
+++ b/wm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.75 2005/09/04 04:57:31 xtraeme Exp $
+# $NetBSD: Makefile,v 1.76 2005/09/04 06:58:59 xtraeme Exp $
 #
 
 COMMENT=	X11 window managers, configuration tools, and themes
@@ -73,6 +73,7 @@ SUBDIR+=	wmctrl
 SUBDIR+=	wmdrawer
 SUBDIR+=	wmextra
 SUBDIR+=	wmi
+SUBDIR+=	wmii
 SUBDIR+=	wmthemes
 SUBDIR+=	wmx
 SUBDIR+=	wmx-gnome
