--- a/wm/larswm/Makefile
+++ b/wm/larswm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/03/07 10:05:08 uebayasi Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/11 21:47:47 tv Exp $
 #
 
 DISTNAME=	larswm-7.5.3
@@ -20,7 +20,9 @@ USE_IMAKE=	YES
 EGDIR=		${PREFIX}/share/examples/larswm
 CONF_FILES=	${EGDIR}/sample.larswmrc ${PKG_SYSCONFDIR}/larswmrc
 
-CPPFLAGS=	-DPKG_SYSCONFDIR="\"${PKG_SYSCONFDIR}\""
+.include "../../mk/bsd.prefs.mk"
+
+CPPFLAGS+=	-DPKG_SYSCONFDIR=\"${PKG_SYSCONFDIR:Q}\"
 
 post-patch:
 	@cd ${WRKSRC} &&					\
