--- a/sysutils/isapnptools/Makefile
+++ b/sysutils/isapnptools/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/01/24 15:06:57 grant Exp $
+# $NetBSD: Makefile,v 1.8 2005/05/22 20:08:33 jlam Exp $
 #
 
 DISTNAME=	isapnptools-1.26
@@ -16,6 +16,10 @@ ONLY_FOR_PLATFORM=	NetBSD-*-i386
 
 USE_TOOLS+=	gmake
 GNU_CONFIGURE=	YES
-CONFIGURE_ARGS=	--disable-realtime --disable-pci
+
+.include "../../mk/bsd.prefs.mk"
+
+CONFIGURE_ARGS+=	--disable-realtime
+CONFIGURE_ARGS+=	--disable-pci
 
 .include "../../mk/bsd.pkg.mk"
