--- a/net/freenet-tools/Makefile
+++ b/net/freenet-tools/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2005/05/22 20:08:23 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2005/06/17 03:50:25 jlam Exp $
 #
 
 DISTNAME=		ft-0.2.23
@@ -22,7 +22,7 @@ INSTALLATION_DIRS=	bin
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/ft ${PREFIX}/bin/ft
 .for f in fcpchk fcpget fcpgetsite fcphello fcpinv fcpkey fcpput fcpputsite
-	${LN} -s -f ft ${PREFIX}/bin/$f
+	${LN} -s -f ft ${PREFIX}/bin/${f}
 .endfor
 
 .include "../../mk/bsd.pkg.mk"
