--- a/sysutils/screentest/Makefile
+++ b/sysutils/screentest/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/04/11 21:47:29 tv Exp $
+# $NetBSD: Makefile,v 1.9 2005/06/01 18:03:22 jlam Exp $
 #
 
 DISTNAME=	screentest-1.0
@@ -15,9 +15,8 @@ GNU_CONFIGURE=	yes
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/screentest
 .for f in AUTHORS ChangeLog NEWS README
-	${INSTALL_DATA} ${WRKSRC}/$f ${PREFIX}/share/doc/screentest
+	${INSTALL_DATA} ${WRKSRC}/${f} ${PREFIX}/share/doc/screentest
 .endfor
-.undef f
 
 .include "../../x11/gtk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
