--- a/sysutils/user_interix/Makefile
+++ b/sysutils/user_interix/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2005/04/11 21:47:30 tv Exp $
+# $NetBSD: Makefile,v 1.3 2005/06/17 03:50:36 jlam Exp $
 #
 
 DISTNAME=		user-20040426
@@ -22,7 +22,7 @@ INSTALLATION_DIRS=	sbin
 
 do-install:
 .for f in useradd userdel groupadd groupdel
-	${INSTALL_SCRIPT} ${FILESDIR}/$f.sh ${PREFIX}/sbin/$f
+	${INSTALL_SCRIPT} ${FILESDIR}/${f}.sh ${PREFIX}/sbin/${f}
 .endfor
 
 .include "../../mk/bsd.pkg.mk"
