--- a/x11/wdm/Makefile
+++ b/x11/wdm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2005/04/11 21:48:14 tv Exp $
+# $NetBSD: Makefile,v 1.23 2005/09/22 21:33:45 jmmv Exp $
 
 DISTNAME=		wdm-1.25
 PKGREVISION=		6
@@ -41,9 +41,8 @@ CONF_FILES=
 		Xresources Xservers Xservers.fs Xservers.ws Xsession	\
 		Xsession.XFree86 Xsession.orig Xsetup_0 wdm-config	\
 		wdm-config.in wdmReconfig
-CONF_FILES+=	${PREFIX}/share/examples/wdm/$f ${PKG_SYSCONFDIR}/$f
+CONF_FILES+=	${PREFIX}/share/examples/wdm/${f} ${PKG_SYSCONFDIR}/${f}
 .endfor
-.undef f
 
 .include "../../mk/bsd.prefs.mk"
 
