--- a/misc/screen/Makefile
+++ b/misc/screen/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.60 2005/09/20 04:23:48 jlam Exp $
+# $NetBSD: Makefile,v 1.61 2005/09/28 19:35:36 rillig Exp $
 
 DISTNAME=	screen-4.0.2
 PKGREVISION=	3
@@ -16,7 +16,7 @@ NOT_FOR_PLATFORM=	Interix-*-* # user auth and username size fixes needed
 
 USE_PKGINSTALL=		YES
 INFO_FILES=		screen.info
-PLIST_SUBST=		DISTNAME=${DISTNAME}
+PLIST_SUBST+=		DISTNAME=${DISTNAME:Q}
 
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--with-sys-screenrc=${PKG_SYSCONFDIR}/screenrc
