--- a/security/ssh2/Makefile.common
+++ b/security/ssh2/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.12 2005/04/11 21:47:19 tv Exp $
+# $NetBSD: Makefile.common,v 1.13 2005/06/01 18:03:21 jlam Exp $
 #
 
 DISTNAME=	ssh-3.2.9.1
@@ -27,7 +27,7 @@ PLIST_SRC=		${.CURDIR}/../../security/ssh2/PLIST
 .if defined(USE_X11)
 PLIST_SUBST+=	X11_SUPPORT=
 .else
-PLIST_SUBST=	X11_SUPPORT='@comment '
+PLIST_SUBST+=	X11_SUPPORT='@comment '
 .endif
 
 .include "../../mk/bsd.prefs.mk"
