--- a/converters/wv/Makefile
+++ b/converters/wv/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.47 2005/07/21 16:29:45 wiz Exp $
+# $NetBSD: Makefile,v 1.48 2005/08/10 20:56:13 jlam Exp $
 
 DISTNAME=	wv-1.0.3
-PKGREVISION=    2
+PKGREVISION=    3
 CATEGORIES=	converters
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=wvware/}
 
