--- a/graphics/gocr/Makefile
+++ b/graphics/gocr/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/05/22 20:08:34 jlam Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/10/16 20:20:41 wiz Exp $
 
 DISTNAME=	gocr-0.37
 CATEGORIES=	graphics
@@ -8,7 +8,9 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://sourceforge.net/projects/jocr
 COMMENT=	GOCR is a set of OCR tools
 
-GNU_CONFIGURE=	yes
-USE_TOOLS+=	gmake
+GNU_CONFIGURE=		yes
+CONFIGURE_HAS_MANDIR=	no
+CONFIGURE_ARGS+=	--mandir=/${PKGMANDIR}
+USE_TOOLS+=		gmake
 
 .include "../../mk/bsd.pkg.mk"
