--- a/devel/cmake/Makefile
+++ b/devel/cmake/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/04/11 21:45:19 tv Exp $
+# $NetBSD: Makefile,v 1.17 2005/05/22 20:07:49 jlam Exp $
 
 DISTNAME=	cmake-2.0.5
 CATEGORIES=	devel
@@ -12,6 +12,8 @@ USE_TOOLS+=		gmake
 USE_LANGUAGES=		c c++
 USE_NCURSES=		yes
 GNU_CONFIGURE=		yes
+CONFIGURE_HAS_MANDIR=	no
+CONFIGURE_ARGS+=	--mandir=/${PKGMANDIR}
 BUILD_TARGET=		default_target
 
 post-patch:
