--- a/multimedia/mplayer/Makefile
+++ b/multimedia/mplayer/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2005/08/27 06:59:52 dogcow Exp $
+# $NetBSD: Makefile,v 1.21 2005/10/20 03:47:37 minskim Exp $
 
 PKGNAME=	mplayer-${MPLAYER_PKG_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 
 COMMENT=	Software-only MPEG-1/2/4 video decoder
 
